# GDMaker

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  SConstruct  libaries.py  licence.txt  meson.build  package-lock.json  package.json
bake/: bake_config.h
core/: SCsub  core_bind.c  register_core_types.c  register_core_types.h
core/cache/: SCsub  cache_core.c  cache_core.h  cache_crypto.c  cache_crypto.h
core/collections/: hash_map.h
core/config/: SCsub  project_settings.h
core/debugger/: SCsub
core/error/: error_list.c  error_list.h  error_macros.c  error_macros.h
core/input/: input.h
core/io/: SCsub  config_file.c  config_file.h  dir_access.c  dir_access.h  file.c  file.h  http_client.c  http_client.h  http_server.c  http_server.h  image.c  image.h
core/object/: callable.cpp  callable.h  method_bind.c  method_bind.h  method_bind_pointer.c  method_bind_pointer.h  object.c  object.h  ref_counted.c  ref_counted.h  struct_db.c  struct_db.h
core/string/: string.c  string.h
core/variant/: array.c  array.h  dictionary.h  variant.c  variant.h
editor/project_manager/: project_manager.h.save
main/: SCsub  main.cpp  main.h
modules/rift/: parser.c  parser.h  tokenizer.c  tokenizer.h
modules/riftscript/: riftscript_tokenizer.cpp  riftscript_tokenizer.h
scene/gui/: container.h
src/core/: core_globals.h
src/core/config/: config.h
src/core/object/: class.cpp  class.h  method_bind.h  object.h  property_info.cpp  property_info.h
src/core/std/: any.h  array.h  list.h  map.h  set.h  string.h  unordered_map.h  unordered_set.h  variant.h  vector.h
src/core/variant/: variant.cpp  variant.h
subenv/: subenv.py
